# BlackHoleRenderer

./: Cargo.toml  build.rs
src/: main.rs  renderer.rs  shader.rs
src/renderer/: app.rs  kernels.rs  render_thread.rs
src/shader/: basic_sphere.rs  basic_sphere.wgsl  kerr.rs  kerr.wgsl  simple.rs  simple.wgsl
