[package]
name = "BlackHoleRenderer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.35.0"
egui = "0.35.0"
encase = "0.12.0"
glam = { version = "0.33.2", features = ["encase", "bytemuck"] }
tokio = { version = "1.52.3", features = ["sync", "rt", "rt-multi-thread"] }
wgpu = "30.0.0"

[build-dependencies]
wgsl_to_wgpu = "0.19.0"
